--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -23,6 +23,17 @@
   </a>
   {% endif %}
 
+    {% if site.youtube_username != null %}
+  <a class="social-link" aria-label="My Youtube" target="_blank" rel="noreferrer"
+    href="https://www.youtube.com/@{{site.youtube_username}}">
+    <div class="social">
+      <svg class="social-svg" viewBox="0 0 48 48">
+        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#github" | prepend: site.baseurl }}"></use>
+      </svg>
+    </div>
+  </a>
+  {% endif %}
+
   {% if site.codepen_username != null %}
   <a class="social-link black" aria-label="My Codepen" target="_blank" rel="noreferrer"
     href="https://codepen.io/{{site.codepen_username}}">
