--- a/_includes/section-contact.html
+++ b/_includes/section-contact.html
@@ -34,6 +34,19 @@
   </a>
   {% endif %}
 
+  
+    {% if site.notion_username != null %}
+  <a class="social-link" aria-label="My Youtube" target="_blank" rel="noreferrer"
+    href="https://{{site.notion_username}}.oopy.io/">
+    <div class="social">
+      <svg class="social-svg" viewBox="0 0 48 48">
+        <use x="12" y="12" width="24" height="24" viewBox="0 0 48 48" xlink:href="{{ "/assets/img/brands.svg#notion" | prepend: site.baseurl }}"></use>
+      </svg>
+    </div>
+  </a>
+  {% endif %}
+
+  
   {% if site.codepen_username != null %}
   <a class="social-link black" aria-label="My Codepen" target="_blank" rel="noreferrer"
     href="https://codepen.io/{{site.codepen_username}}">
