--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -58,7 +58,7 @@
 
       {% if site.notion_username != null %}
         <a class="social-link" aria-label="My Notion" target="_blank" rel="noreferrer"
-          href="https://{{site.youtube_username}}.oopy.io/"
+          href="https://{{site.notion_username}}.oopy.io/"
           >
           <svg viewBox="0 0 200 200" class="circle">
             <circle cx="100" cy="100" r="80" />
