--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,11 @@
         {% include section-projects.html %}
       </section>
     {% endif %}
+    {%if site.show_projects_card %}
+      <section class="card neumorphism-card-big">
+        {% include section-lectures.html %}
+      </section>
+    {% endif %}
     {%if site.show_contact_card %}
     <section class="card neumorphism-card-big">
       {% include section-contact.html %}
