--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
         {% include section-projects.html %}
       </section>
     {% endif %}
-    {%if site.show_projects_card %}
+    {%if site.show_lectures_card %}
       <section class="card neumorphism-card-big">
         {% include section-lectures.html %}
       </section>
