--- a/_includes/section-lectures.html
+++ b/_includes/section-lectures.html
@@ -1,40 +1,40 @@
-{% if site.show_lectures %}
-  <h1 class="title"><span>{{site.lectures_title}}</span></h1>
-  <div class="lectures-wrapper">
-    {% for lecture in site.data.lectures %}
-      <div class="lecture neumorphism-card" data-aos="zoom-in-down">
+{% if site.show_projects %}
+  <h1 class="title"><span>{{site.projects_title}}</span></h1>
+  <div class="projects-wrapper">
+    {% for project in site.data.projects %}
+      <div class="project neumorphism-card" data-aos="zoom-in-down">
         <div class="name-link-wrapper">
-          <h3>{{lecture.name}}</h3>
+          <h3>{{project.name}}</h3>
         </div>
-        <p class="lecture-desc">{{lecture.descr}}</p>
-        {% if lecture.demo %}
-          <a class="highlight-link" href="{{lecture.demo}}" target="_blank" rel="noreferrer">
+        <p class="project-desc">{{project.descr}}</p>
+        {% if project.demo %}
+          <a class="highlight-link" href="{{project.demo}}" target="_blank" rel="noreferrer">
             Demo
           </a>
         {% endif %}
-        {% if lecture.demo_01 %}
-          <a class="highlight-link" href="{{lecture.demo1}}" target="_blank" rel="noreferrer">
+        {% if project.demo_01 %}
+          <a class="highlight-link" href="{{project.demo1}}" target="_blank" rel="noreferrer">
             Demo_01
           </a>
         {% endif %}
-        {% if lecture.demo_02 %}
-          <a class="highlight-link" href="{{lecture.demo2}}" target="_blank" rel="noreferrer">
+        {% if project.demo_02 %}
+          <a class="highlight-link" href="{{project.demo2}}" target="_blank" rel="noreferrer">
             Demo_02
           </a>
         {% endif %}
-                {% if lecture.Build %}
-          <a class="highlight-link" href="{{lecture.Build}}" target="_blank" rel="noreferrer">
+                {% if project.Build %}
+          <a class="highlight-link" href="{{project.Build}}" target="_blank" rel="noreferrer">
             Build
           </a>
         {% endif %}
-        {% if lecture.git %}
-          <a class="highlight-link" href="{{lecture.git}}" target="_blank" rel="noreferrer">
+        {% if project.git %}
+          <a class="highlight-link" href="{{project.git}}" target="_blank" rel="noreferrer">
             Git
           </a>
         {% endif %}
-        {% if lecture.tags %}
+        {% if project.tags %}
           <div class="tag-wrapper">
-            {% for tag in lecture.tags %}
+            {% for tag in project.tags %}
               <span class="tag neumorphism-card">{{tag.tag}}</span>
             {% endfor %}
           </div>
@@ -44,33 +44,33 @@
   </div>
 {% endif %}
 
-{% if site.show_os_lectures %}
-  <h1 class="title">{{site.os_lectures_title}}</h1>
-  {% if site.lectures.sort_by == 'stars' %}
+{% if site.show_os_projects %}
+  <h1 class="title">{{site.os_projects_title}}</h1>
+  {% if site.projects.sort_by == 'stars' %}
     {% assign sort_order = 'stargazers_count', 'last' %}
   {% else %}
     {% assign sort_order = 'pushed_at' %}
   {% endif %}
 
-  {% if site.lectures.exclude.archived && site.lectures.exclude.forks %}
+  {% if site.projects.exclude.archived && site.projects.exclude.forks %}
     {% assign filtered_repos = site.github.public_repositories | where:'archived', false | where:'fork', false | sort: sort_order | reverse %}
-  {% elsif site.lectures.exclude.archived %}
+  {% elsif site.projects.exclude.archived %}
     {% assign filtered_repos = site.github.public_repositories | where:'archived', false | sort: sort_order | reverse %}
-  {% elsif site.lectures.exclude.forks %}
+  {% elsif site.projects.exclude.forks %}
     {% assign filtered_repos = site.github.public_repositories | where:'fork', false | sort: sort_order | reverse %}
   {% else %}
     {% assign filtered_repos = site.github.public_repositories | sort: sort_order | reverse %}
   {% endif %}
 
-  <div class="lectures-wrapper">
+  <div class="projects-wrapper">
     {% for repository in filtered_repos %}
-      {% unless site.lectures.exclude.lectures contains repository.name %}
-        <div class="lecture neumorphism-card" data-aos="zoom-in-down">
+      {% unless site.projects.exclude.projects contains repository.name %}
+        <div class="project neumorphism-card" data-aos="zoom-in-down">
           <div class="name-link-wrapper">
             <h3>{{ repository.name }}</h3>
             <div class="links">
               {% if repository.stargazers_count != 0 %}
-                <a href="{{ repository.html_url }}/stargazers" class="lecture-stars-forks">
+                <a href="{{ repository.html_url }}/stargazers" class="project-stars-forks">
                   <svg viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true">
                     <path fill-rule="evenodd" d="M14 6l-4.9-.64L7 1 4.9 5.36 0 6l3.6 3.26L2.67 14 7 11.67 11.33 14l-.93-4.74L14 6z">
                     </path>
@@ -78,7 +78,7 @@
                 </a>
                 {% endif %}
                 {% if repository.forks_count != 0 %}
-                <a href="{{ repository.html_url }}/network/members" class="lecture-stars-forks">
+                <a href="{{ repository.html_url }}/network/members" class="project-stars-forks">
                   <svg viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true">
                     <path fill-rule="evenodd"
                       d="M10 5c0-1.11-.89-2-2-2a1.993 1.993 0 0 0-1 3.72v.3c-.02.52-.23.98-.63 1.38-.4.4-.86.61-1.38.63-.83.02-1.48.16-2 .45V4.72a1.993 1.993 0 0 0-1-3.72C.88 1 0 1.89 0 3a2 2 0 0 0 1 1.72v6.56c-.59.35-1 .99-1 1.72 0 1.11.89 2 2 2 1.11 0 2-.89 2-2 0-.53-.2-1-.53-1.36.09-.06.48-.41.59-.47.25-.11.56-.17.94-.17 1.05-.05 1.95-.45 2.75-1.25S8.95 7.77 9 6.73h-.02C9.59 6.37 10 5.73 10 5zM2 1.8c.66 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2C1.35 4.2.8 3.65.8 3c0-.65.55-1.2 1.2-1.2zm0 12.41c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2zm6-8c-.66 0-1.2-.55-1.2-1.2 0-.65.55-1.2 1.2-1.2.65 0 1.2.55 1.2 1.2 0 .65-.55 1.2-1.2 1.2z">
@@ -88,7 +88,7 @@
               {% endif %}
             </div>
           </div>
-          <p class="lecture-desc">{{repository.description}}</p>
+          <p class="project-desc">{{repository.description}}</p>
           {% if repository.homepage != "" and repository.homepage != nil %}
             <a class="highlight-link" href="{{repository.homepage}}" target="_blank" rel="noreferrer">
               Demo
