--- a/_includes/section-lectures.html
+++ b/_includes/section-lectures.html
@@ -1,5 +1,5 @@
 {% if site.show_lectures %}
-  <h1 class="title"><span>{{site.projects_title}}</span></h1>
+  <h1 class="title"><span>{{site.lectures_title}}</span></h1>
   <div class="projects-wrapper">
     {% for project in site.data.lectures %}
       <div class="project neumorphism-card" data-aos="zoom-in-down">
