--- a/_includes/section-lectures.html
+++ b/_includes/section-lectures.html
@@ -33,7 +33,7 @@
           </a>
         {% endif %}
         {% if project.link %}
-          <a class="highlight-link" href="{{project.git}}" target="_blank" rel="noreferrer">
+          <a class="highlight-link" href="{{project.link}}" target="_blank" rel="noreferrer">
             Link
           </a>
         {% endif %}
